Api key ignored

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 
+# Ignore api keys
+/config/initializer/api_keys.yaml
+
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
